Fix homepage horizontal scroll

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -789,7 +789,7 @@ h6 {
         background-repeat: no-repeat;
         background-size: auto 100%;
         background-position: 89% top;
-        height: 200px;
+        height: 80px;
         margin: 0 -1rem;
     }
 }
