--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -1,8 +1,8 @@
 // Bootstrap modal
 .modal {
     .modal-dialog {
-        margin-left: auto !important;
-        margin-right: auto !important;
+        //margin-left: auto !important;
+        //margin-right: auto !important;
     }
 
     .modal-content {
